docs: add English docker README and rename original to README_zh-TW.md