@@ -1,24 +1,26 @@
-# JTrac Docker 容器化建置與部署 (Jetty 12 + Eclipse Temurin 17)
+# JTrac Docker Packaging & Deployment (Jetty 12 + Eclipse Temurin 17)
 
-本目錄提供 JTrac 現代化版本之原生 Docker 多階段建置與容器化執行環境。
+[English](README.md) | [繁體中文](README_zh-TW.md)
 
----
-
-## 特性亮點 (Features)
-
-- **現代化基礎環境**：採用官方 `jetty:12-jre17-eclipse-temurin` 搭配 `ee8-deploy` 與 `ee8-webapp` 模組，原生支援 Servlet 4.0 (`javax.servlet`)。
-- **多階段建置 (Multi-stage Build)**：使用 `maven:3.9-eclipse-temurin-17` 自動自原始碼編譯 `jtrac.war`，無需在本機預先安裝 JDK 或 Maven。
-- **完整多國語系字型支援**：內建 `fontconfig`、`fonts-noto-cjk`（中日韓）、`fonts-noto-core`（越南語等音標字元）、`fonts-dejavu-core`（歐系重音字元），確保全文檢索字元抽取與報表繪圖 0% 缺字或亂碼。
-- **權限自動校正與安全降權**：Entrypoint 啟動時自動檢查並修復掛載 Volume `/jtrac-data` 為 `jetty:jetty`，並透過 `gosu` 降權至非 root 帳號（UID 999）執行，安全且免手動 chown。
-- **資料庫動態注入**：支援透過環境變數注入外部 MySQL / PostgreSQL / Oracle 連線設定，自動渲染至 `/jtrac-data/jtrac.properties`；未指定時預設使用內建升級版 HSQLDB 2.x。
+This directory provides native multi-stage Docker packaging and containerized runtime deployment environments for modernized JTrac.
 
 ---
 
-## 快速上手 (Quick Start)
+## Features
 
-### 方式一：原生 Docker 指令 (推薦)
+- **Modernized Runtime Environment**: Based on official `jetty:12-jre17-eclipse-temurin` with `--add-modules=ee8-deploy,ee8-webapp`, natively supporting Servlet 4.0 (`javax.servlet`).
+- **Multi-stage Build**: Automatically compiles `jtrac.war` from source using `maven:3.9-eclipse-temurin-17` with `-DskipTests`, requiring no local JDK or Maven installation.
+- **Full Multilingual Font Support**: Pre-installed `fontconfig`, `fonts-noto-cjk` (CJK characters), `fonts-noto-core` (Vietnamese and diacritics), and `fonts-dejavu-core` (European accents), preventing missing glyphs (tofu) and garbled characters during PDF/Office full-text indexing and report generation.
+- **Dynamic Volume Permission Fix & Secure Step-down**: The entrypoint runs as root on boot to automatically repair `/jtrac-data` ownership to `jetty:jetty` (UID 999), and then steps down using `gosu` to run Jetty securely without manual host `chown`.
+- **Dynamic Database Configuration**: Supports environment variables (`DATABASE_URL`, `DATABASE_DRIVER`, etc.) to automatically configure `/jtrac-data/jtrac.properties`. Defaults to embedded HSQLDB 2.x when unset.
 
-進入 `docker` 目錄，以專案根目錄（`..`）作為 Build Context 進行建置：
+---
+
+## Quick Start
+
+### Method 1: Native Docker Command (Recommended)
+
+From the `docker/` directory, build the image using the project root (`..`) as the build context:
 
 ```bash
 cd docker
@@ -26,23 +28,22 @@ docker build -f Dockerfile -t jtrac:latest ..
 docker run -d -p 8888:8080 -v jtrac_data:/jtrac-data --name jtrac jtrac:latest
 ```
 
-服務啟動後，使用瀏覽器開啟：`http://localhost:8888/`
-預設管理員帳密為：`admin` / `admin`
+Open `http://localhost:8888/` in your browser (default credentials: `admin` / `admin`).
 
 ---
 
-### 方式二：跨平台輔助腳本
+### Method 2: Cross-Platform Helper Scripts
 
-本目錄提供針對不同作業系統之一鍵腳本：
+Convenient helper scripts are provided in this directory:
 
-- **Windows**：
+- **Windows**:
   ```cmd
   cd docker
   build.bat
   run.bat
   ```
 
-- **Linux / macOS**：
+- **Linux / macOS**:
   ```bash
   cd docker
   chmod +x *.sh
@@ -52,33 +53,44 @@ docker run -d -p 8888:8080 -v jtrac_data:/jtrac-data --name jtrac jtrac:latest
 
 ---
 
-### 方式三：Docker Compose
+### Method 3: Docker Compose
 
 ```bash
 cd docker
 docker compose up -d
 ```
 
-停止容器：
+Stop the container:
 ```bash
 docker compose down
 ```
 
 ---
 
-## 資料持久化 (Data Persistence)
+### Method 4: Run Pre-built Image from Docker Hub
 
-JTrac 所有系統設定、使用者資料庫與上傳附件皆統一持久化於 `/jtrac-data`：
+You can also run the official pre-built image directly from Docker Hub:
+**[https://hub.docker.com/r/inmethod/jtrac](https://hub.docker.com/r/inmethod/jtrac)**
 
-| 目錄 / 檔案路徑 | 說明 |
+```bash
+docker run -d -p 8888:8080 -v jtrac_data:/jtrac-data --name jtrac inmethod/jtrac:tag
+```
+
+---
+
+## Data Persistence
+
+All system configurations, database files, and uploaded attachments are persisted in `/jtrac-data`:
+
+| Path | Description |
 |---|---|
-| `/jtrac-data/jtrac.properties` | 系統資料庫連線驅動與參數設定檔 |
-| `/jtrac-data/db/` | 內建 HSQLDB 2.x 資料庫實體檔案 |
-| `/jtrac-data/attachments/` | 依專案 ID 分區儲存之工單歷史附件 |
-| `/jtrac-data/indexes/` | Lucene 全文檢索索引庫（可由後台重建） |
-| `/jtrac-data/backups/` | 全系統備份與還原安全快照 |
+| `/jtrac-data/jtrac.properties` | Database connection driver and parameters |
+| `/jtrac-data/db/` | Embedded HSQLDB 2.x database files |
+| `/jtrac-data/attachments/` | Issue attachments partitioned by space ID |
+| `/jtrac-data/indexes/` | Lucene full-text search index repository |
+| `/jtrac-data/backups/` | Full system backup snapshots |
 
-### 掛載本機宿主目錄範例：
+### Host Directory Mount Example:
 ```bash
 docker run -d \
   -p 8888:8080 \
@@ -86,23 +98,23 @@ docker run -d \
   --name jtrac \
   jtrac:latest
 ```
-*(無論宿主機目錄擁有者為何，Entrypoint 均會自動進行權限修復)*
+*(The entrypoint automatically fixes directory ownership on boot).*
 
 ---
 
-## 外部資料庫連線 (External Database via Environment Variables)
+## External Database Connection via Environment Variables
 
-若需連接外部關聯式資料庫，只需在 `docker run` 或 `docker-compose.yml` 中傳入環境變數，容器開機時會自動生成對應的 `jtrac.properties`：
+To connect to an external relational database (MySQL, PostgreSQL, Oracle, etc.), supply environment variables during container startup:
 
-| 環境變數 | 說明 | 範例值 (MySQL) |
+| Environment Variable | Description | Example (MySQL) |
 |---|---|---|
-| `DATABASE_URL` | JDBC 連線字串 | `jdbc:mysql://db:3306/jtrac?useUnicode=true&characterEncoding=UTF-8` |
-| `DATABASE_DRIVER` | JDBC 驅動類別名稱 | `com.mysql.cj.jdbc.Driver` |
-| `DATABASE_USERNAME` | 資料庫登入使用者名稱 | `jtrac` |
-| `DATABASE_PASSWORD` | 資料庫密碼 | `secret123` |
-| `HIBERNATE_DIALECT` | (選填) Hibernate 方言類別 | `org.hibernate.dialect.MySQL8Dialect` |
+| `DATABASE_URL` | JDBC connection URL | `jdbc:mysql://db:3306/jtrac?useUnicode=true&characterEncoding=UTF-8` |
+| `DATABASE_DRIVER` | JDBC driver class name | `com.mysql.cj.jdbc.Driver` |
+| `DATABASE_USERNAME` | Database username | `jtrac` |
+| `DATABASE_PASSWORD` | Database password | `secret123` |
+| `HIBERNATE_DIALECT` | (Optional) Hibernate dialect | `org.hibernate.dialect.MySQL8Dialect` |
 
-### 啟動外部資料庫容器範例：
+### Example with External MySQL:
 ```bash
 docker run -d \
   -p 8888:8080 \
@@ -118,12 +130,12 @@ docker run -d \
 
 ---
 
-## JVM 參數自訂 (JVM Options)
+## Custom JVM Options
 
-預設 JVM 參數為：
+Default JVM parameters:
 `-Djtrac.home=/jtrac-data -Dfile.encoding=UTF-8 -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:InitialRAMPercentage=25.0`
 
-可透過傳遞 `JAVA_OPTIONS` 環境變數自訂：
+Override by passing the `JAVA_OPTIONS` environment variable:
 ```bash
 docker run -d \
   -p 8888:8080 \
